@@ -16,11 +16,12 @@ def _forbidden(_request, response, *_):
     response['_meta']['message'] = "Method Not Allowed"
 
 
-class ModelOperation(object):
-    """Base class for model operations.
+class Operation(object):
+    """Base class for operations. The ModelOperation and InstanceOperation
+    classes are for backward compatibility, but their use is deprecated.
     """
     METHODS = ['GET', 'OPTIONS', 'POST', 'PUT', 'DELETE']
-    model_operation = True
+
     def __init__(self, model, name, uri = None):
         self.model = model
         self.name = name
@@ -60,8 +61,7 @@ class ModelOperation(object):
                         if hasattr(self, method.lower())])
         return retvalue
 
-
-    def operation(self, request, response, *args):
+    def operation(self, request, response, _appname, _model, *args):
         """Perform the requested operation in the server.
         """
         if request.method in self.METHODS:
@@ -72,10 +72,26 @@ class ModelOperation(object):
             _forbidden(request, response)
         return self.headers(None, request, response)
 
-
     def options(self, request, response, *_):
         """A standard options response that will fill in the Allow header.
         """
+        return self.headers(None, request, response)
+
+
+class ModelOperation(Operation):
+    """Base class for model operations.
+    """
+    model_operation = True
+
+    def operation(self, request, response, *args):
+        """Perform the requested operation in the server.
+        """
+        if request.method in self.METHODS:
+            retvalue = getattr(self, request.method.lower(), _forbidden)(
+                request, response, *args)
+            return self.headers(retvalue, request, response)
+        else:
+            _forbidden(request, response)
         return self.headers(None, request, response)
 
 
